plotted more for the about page... need to write

--- a/styles/style.css
+++ b/styles/style.css
@@ -74,6 +74,9 @@ a:hover{
 
 .paragraph-content-image{
     width: 60%;
+    overflow: hidden;
+    align-self: center;
+    margin-right: 20px;
 }
 
 .paragraph-content{
