--- a/styles/style.css
+++ b/styles/style.css
@@ -13,11 +13,12 @@
 html {
     font-size: 0.8rem;
     color: var(--dark-text);
-    font-family: 'Nunito Sans', sans-serif;
     }  
 
 body{
     background-color: var(--bg-yellow);
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 1.4rem;
 }
 
 h1 {
@@ -25,11 +26,19 @@ h1 {
     text-align: center;
     margin: 0;
     font-family: 'Sour Gummy', sans-serif;
+    margin-bottom: 1rem;
     }
+
+h2, h3, h4, h5{
+    font-family: 'Sour Gummy', sans-serif;
+    font-weight: 400;
+    margin-bottom: 1rem;
+}
 
 p{
     font-size: 1.4rem;
     line-height: 1.5;
+    margin-bottom: 1rem;
     }
 
 a{
@@ -49,6 +58,10 @@ a:hover{
     justify-content: center;
 }
 
+.navbar{
+    padding:0;
+}
+
 .navbar-nav{
     column-gap: 15px;
 }
@@ -57,6 +70,8 @@ a:hover{
     font-family: 'Sour Gummy', sans-serif;
     font-size: 2rem;
     background-color: var(--med-yellow);
+    border-radius: 5px;
+    text-align: center;
 }
 
 .navbar-toggler{
@@ -81,7 +96,7 @@ a:hover{
     width: 30%;
     overflow: hidden;
     align-self: center;
-    margin-right: 20px;
+    margin-right: 1.5rem;
 }
 
 .paragraph-content-image img , .paragraph-content-image-alt img{
@@ -90,6 +105,7 @@ a:hover{
 
 .paragraph-content{
     width: 70%;
+    margin-right: 1.5rem;
 }
 
 .paragraph-content-image-alt{
@@ -112,13 +128,14 @@ a:hover{
 
 .tri-column-content{
     display: grid;
-    grid-template-columns: 33% 33% 33%;
-    grid-column-gap: 50px;
+    grid-template-columns: 30% 30% 30%;
+    grid-column-gap: 5%;
     justify-content: center;
 }
 
 .tri-column-content img{
     width: 100%;
+    margin-bottom: 1rem;
 }
 
 footer{
@@ -151,6 +168,39 @@ footer{
     padding: 10px;
     border-radius: 5px;
     width: 50px;
+}
+
+/* For any images we want with hover transition effects */
+
+.hover-container{
+    display: grid;
+}
+
+.hover-container > img {
+    display: block;
+    grid-column-start: 0;
+    grid-row-start: 0;
+    grid-column-end: 1;
+    grid-row-end: 1;
+    width: 100%;
+    height: 100%;
+    transition: opacity 0.8s ease-in-out;    
+}
+
+.hover-container > img:nth-child(1) { /* first <img> child of <div> */
+    opacity: 1;
+}
+.hover-container > img:nth-child(2) { /* second <img> child of <div> */
+    opacity: 0;
+    z-index: 10;
+}
+
+/* hover */
+.hover-container:hover > img:nth-child(1) { 
+    opacity: 0;
+}
+.hover-container:hover > img:nth-child(2) { 
+    opacity: 1;
 }
 
 /* Styling allllll the itty bitty comic panels one by one. */
