added a silly seal...

--- a/styles/about.css
+++ b/styles/about.css
@@ -6,3 +6,33 @@ img{
     width: 350px;
     height: 450px;
 }
+
+.hover-container-lift{
+    display: grid;
+}
+
+.hover-container-lift > img {
+    display: block;
+    grid-column-start: 0;
+    grid-row-start: 0;
+    grid-column-end: 1;
+    grid-row-end: 1;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.8s ease-in-out;    
+}
+
+.hover-container-lift > img:nth-child(1) { /* first <img> child of <div> */
+
+}
+.hover-container-lift > img:nth-child(2) { /* second <img> child of <div> */
+    z-index: -1;
+}
+
+/* hover */
+.hover-container-lift:hover > img:nth-child(1) { 
+    transform: translateY(-150px);
+}
+.hover-container-lift:hover > img:nth-child(2) { 
+    
+}
