Fixed up some link hover effects and the main bgs

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
 :root {
     --bg-yellow: #fee187;
     --med-yellow: #ffb540;
+    --dark-yellow: #ff9d00;
     --brown: #82390e;
     --dark-text: #141414;
 
@@ -17,8 +18,11 @@ html {
 
 body{
     background-color: var(--bg-yellow);
+    background-image:  linear-gradient(#ffb6401c 2.4000000000000004px, transparent 2.4000000000000004px), linear-gradient(to right, #ffb6401c 2.4000000000000004px, rgba(255,255,255,0) 2.4000000000000004px);
+    background-size: 48px 48px;
     font-family: 'Nunito Sans', sans-serif;
     font-size: 1.4rem;
+    background-position: center;
 }
 
 h1 {
@@ -32,7 +36,7 @@ h1 {
 h2, h3, h4, h5{
     font-family: 'Sour Gummy', sans-serif;
     font-weight: 400;
-    margin-bottom: 1rem;
+    margin-bottom: 0.8rem; /* to account for the font's spacing */
 }
 
 p{
@@ -41,12 +45,38 @@ p{
     margin-bottom: 1rem;
     }
 
-a{
-    color: var(--dark-text)
+a.in-text{
+    color: var(--brown);
+    text-decoration: underline;
+    text-decoration-style: wavy;
+    transition: 0.3s ease-in-out;
+    position:relative;
 }
 
-a:hover{
-    color: var(--brown)
+a.in-text::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--med-yellow);
+    bottom: 0 ;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: left;
+    z-index:-1;
+    transition: transform 0.4s ease-out;
+}
+
+a.in-text:hover{
+    color: var(--dark-text);
+    text-decoration: underline;
+    text-decoration-style: wavy;
+}
+
+a:hover::before{
+    background-color: var(--med-yellow);
+    border-radius: 2px;
+    transform: scaleX(1);
 }
 
 .page-content{
@@ -60,6 +90,7 @@ a:hover{
 
 .navbar{
     padding:0;
+    margin-bottom: 20px;
 }
 
 .navbar-nav{
@@ -72,6 +103,18 @@ a:hover{
     background-color: var(--med-yellow);
     border-radius: 5px;
     text-align: center;
+    transition: 0.3s ease-in-out;
+    color: var(--dark-text)
+}
+
+.nav-item:hover{
+    background-color: var(--dark-yellow);
+    transform: translateY(-5px);
+    color: var(--brown)
+}
+
+.nav-item a, .nav-item a:hover{
+    color: var(--brown)
 }
 
 .navbar-toggler{
@@ -86,6 +129,13 @@ a:hover{
     background-position: center;
     background-size: 100%;
 }
+
+.nav-link{
+    width:100%;
+    height:100%
+}
+
+/* Styling Content segments */
 
 .content-segment {
     width: 100%;
@@ -183,7 +233,7 @@ footer{
     grid-column-end: 1;
     grid-row-end: 1;
     width: 100%;
-    height: 100%;
+    height: auto;
     transition: opacity 0.8s ease-in-out;    
 }
 
@@ -233,6 +283,7 @@ a .homepage-comic-subpanel-contents:hover{
 
 .homepage-comic-subpanel-contents{
     position: absolute;
+    z-index:-10;
 }
 
 .text-box{
@@ -259,24 +310,28 @@ a .homepage-comic-subpanel-contents:hover{
     top: 342px;
     width: 380px;
     left: 840px;
+    z-index:0;
 }
 
 .subpanel-games{
     top: 458px;
     left: -8px;
-    width: 400px; 
+    width: 400px;
+    z-index:0;
 }
 
 .subpanel-comics{
     top: 405px;
     left: 370px;
     width: 450px;
+    z-index:0;
 }
 
 .bubble-one{
     top: 633px;
     left: 860px;
     width: 401px;
+    z-index:0;
 }
 
 .text-box-two{
@@ -285,6 +340,7 @@ a .homepage-comic-subpanel-contents:hover{
     line-height: 1.2;
     width: 326px;
     left: 900px;
+    z-index:0;
 }
 
 .text-box-three{
@@ -335,6 +391,7 @@ a .homepage-comic-subpanel-contents:hover{
     text-align: center;
     line-height: 1.2;
     left: 725px;
+    z-index:1;
 }
 
 .mail-icon{
@@ -343,4 +400,5 @@ a .homepage-comic-subpanel-contents:hover{
     text-align: center;
     line-height: 1.2;
     left: 820px;
+    z-index:0;
 }
